--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/public/img/favicon.svg" type="image/svg">
+    <link rel="shortcut icon" href="./public/img/favicon.svg" type="image/svg">
     <title>Google</title>
 </head>
 <body>
@@ -15,84 +15,84 @@
             </div>
             <div class="google-buttons">
                 <button class="google-apps">
-                    <img class="google-apps-button-img" src="/public/img/apps-image.svg" alt="">
+                    <img class="google-apps-button-img" src="./public/img/apps-image.svg" alt="">
                     <div class="google-apps-block">
                         <div class="first-block">
                             <li class="account">
                                 <a href="https://myaccount.google.com/intro?utm_source=OGB&tab=wk&utm_medium=app" class="account-link">
-                                    <img class="account-img" src="/public/img/figure.svg" alt="">
+                                    <img class="account-img" src="./public/img/figure.svg" alt="">
                                     <span class="account-text">Аккаунт</span>
                                 </a>
                             </li>
                             <li class="account">
                                 <a href="https://www.google.by/webhp?tab=ww" class="account-link">
-                                    <img class="account-img" src="/public/img/google.svg" alt="">
+                                    <img class="account-img" src="./public/img/google.svg" alt="">
                                     <span class="account-text">Поиск</span>
                                 </a>
                             </li>
                             <li class="account">
                                 <a href="https://www.google.by/maps/@53.718879,27.986709,7z?hl=ru" class="account-link">
-                                    <img class="account-img" src="/public/img/google-maps.svg" alt="">
+                                    <img class="account-img" src="./public/img/google-maps.svg" alt="">
                                     <span class="account-text">Карты</span>
                                 </a>
                             </li>
                             <li class="account">
                                 <a href="https://www.youtube.com/?gl=BY&tab=w1" class="account-link">
-                                    <img class="account-img" src="/public/img/youtube.svg" alt="">
+                                    <img class="account-img" src="./public/img/youtube.svg" alt="">
                                     <span class="account-text">YouTube</span>
                                 </a>
                             </li>
                             <li class="account">
                                 <a href="https://play.google.com/store?hl=ru&tab=w8" class="account-link">
-                                    <img class="account-img" src="/public/img/google-play-store.svg" alt="">
+                                    <img class="account-img" src="./public/img/google-play-store.svg" alt="">
                                     <span class="account-text">Play</span>
                                 </a>
                             </li>
                             <li class="account">
                                 <a href="https://www.google.com/intl/ru/gmail/about/#" class="account-link">
-                                    <img class="account-img" src="/public/img/gmail.svg" alt="">
+                                    <img class="account-img" src="./public/img/gmail.svg" alt="">
                                     <span class="account-text">Почта</span>
                                 </a>
                             </li>
                             <li class="account">
                                 <a href="https://apps.google.com/meet/?hs=197" class="account-link">
-                                    <img class="account-img" src="/public/img/google-meet.svg" alt="">
+                                    <img class="account-img" src="./public/img/google-meet.svg" alt="">
                                     <span class="account-text">Meet</span>
                                 </a>
                             </li>
                             <li class="account">
                                 <a href="https://accounts.google.com/signin/v2/identifier?passive=1209600&continue=https%3A%2F%2Fcontacts.google.com%2F%3Fhl%3Dru%26tab%3DwC&followup=https%3A%2F%2Fcontacts.google.com%2F%3Fhl%3Dru%26tab%3DwC&hl=ru&flowName=GlifWebSignIn&flowEntry=ServiceLogin" class="account-link">
-                                    <img class="account-img" src="/public/img/google-contacts.svg" alt="">
+                                    <img class="account-img" src="./public/img/google-contacts.svg" alt="">
                                     <span class="account-text">Контакты</span>
                                 </a>
                             </li>
                             <li class="account">
                                 <a href="https://www.google.com/intl/ru/drive/" class="account-link">
-                                    <img class="account-img" src="/public/img/google-drive.svg" alt="">
+                                    <img class="account-img" src="./public/img/google-drive.svg" alt="">
                                     <span class="account-text">Диск</span>
                                 </a>
                             </li>
                             <li class="account">
                                 <a href="https://accounts.google.com/signin/v2/identifier?service=cl&passive=1209600&osid=1&continue=https%3A%2F%2Fcalendar.google.com%2Fcalendar%2Frender%3Ftab%3Dwc&followup=https%3A%2F%2Fcalendar.google.com%2Fcalendar%2Frender%3Ftab%3Dwc&scc=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin" class="account-link">
-                                    <img class="account-img" src="/public/img/google-calendar.svg" alt="">
+                                    <img class="account-img" src="./public/img/google-calendar.svg" alt="">
                                     <span class="account-text">Календарь</span>
                                 </a>
                             </li>
                             <li class="account">
                                 <a href="https://translate.google.by/?hl=ru&tab=wT" class="account-link">
-                                    <img class="account-img" src="/public/img/translate.svg" alt="">
+                                    <img class="account-img" src="./public/img/translate.svg" alt="">
                                     <span class="account-text">Переводчик</span>
                                 </a>
                             </li>
                             <li class="account">
                                 <a href="https://www.google.com/photos/about/" class="account-link">
-                                    <img class="account-img" src="/public/img/photos.svg" alt="">
+                                    <img class="account-img" src="./public/img/photos.svg" alt="">
                                     <span class="account-text">Фото</span>
                                 </a>
                             </li>
                             <li class="account">
                                 <a href="https://duo.google.com/about/?usp=duo_ald" class="account-link">
-                                    <img class="account-img" src="/public/img/google-duo.svg" alt="">
+                                    <img class="account-img" src="./public/img/google-duo.svg" alt="">
                                     <span class="account-text">Duo</span>
                                 </a>
                             </li>
@@ -100,61 +100,61 @@
                         <div class="second-block">
                             <li class="account">
                                 <a href="https://accounts.google.com/signin/v2/identifier?service=wise&passive=1209600&continue=https%3A%2F%2Fdocs.google.com%2Fdocument%2Fcreate%3Fusp%3Ddocs_alc&followup=https%3A%2F%2Fdocs.google.com%2Fdocument%2Fcreate%3Fusp%3Ddocs_alc&ltmpl=docs&flowName=GlifWebSignIn&flowEntry=ServiceLogin" class="account-link">
-                                    <img class="account-img" src="/public/img/doc-file.svg" alt="">
+                                    <img class="account-img" src="./public/img/doc-file.svg" alt="">
                                     <span class="account-text">Документы</span>
                                 </a>
                             </li>
                             <li class="account">
                                 <a href="https://accounts.google.com/signin/v2/identifier?service=wise&passive=1209600&continue=https%3A%2F%2Fdocs.google.com%2Fspreadsheets%2Fcreate%3Fusp%3Dsheets_alc&followup=https%3A%2F%2Fdocs.google.com%2Fspreadsheets%2Fcreate%3Fusp%3Dsheets_alc&ltmpl=sheets&flowName=GlifWebSignIn&flowEntry=ServiceLogin" class="account-link">
-                                    <img class="account-img" src="/public/img/sheet.svg" alt="">
+                                    <img class="account-img" src="./public/img/sheet.svg" alt="">
                                     <span class="account-text">Таблицы</span>
                                 </a>
                             </li>
                             <li class="account">
                                 <a href="https://accounts.google.com/signin/v2/identifier?service=wise&passive=1209600&continue=https%3A%2F%2Fdocs.google.com%2Fpresentation%2Fcreate%3Fusp%3Dslides_alc&followup=https%3A%2F%2Fdocs.google.com%2Fpresentation%2Fcreate%3Fusp%3Dslides_alc&ltmpl=slides&flowName=GlifWebSignIn&flowEntry=ServiceLogin" class="account-link">
-                                    <img class="account-img" src="/public/img/slides.svg" alt="">
+                                    <img class="account-img" src="./public/img/slides.svg" alt="">
                                     <span class="account-text">Презентации</span>
                                 </a>
                             </li>
                             <li class="account">
                                 <a href="https://www.blogger.com/about/?r=1-null_user" class="account-link">
-                                    <img class="account-img" src="/public/img/icons8-blogger.svg" alt="">
+                                    <img class="account-img" src="./public/img/icons8-blogger.svg" alt="">
                                     <span class="account-text">Blogger</span>
                                 </a>
                             </li>
                             <li class="account">
                                 <a href="https://hangouts.google.com/" class="account-link">
-                                    <img class="account-img" src="/public/img/icons8-hangouts.svg" alt="">
+                                    <img class="account-img" src="./public/img/icons8-hangouts.svg" alt="">
                                     <span class="account-text">Hangouts</span>
                                 </a>
                             </li>
                             <li class="account">
                                 <a href="https://accounts.google.com/signin/v2/identifier?passive=1209600&continue=https%3A%2F%2Fkeep.google.com%2F&followup=https%3A%2F%2Fkeep.google.com%2F&ltmpl=keep&flowName=GlifWebSignIn&flowEntry=ServiceLogin" class="account-link">
-                                    <img class="account-img" src="/public/img/icons8-google-keep.svg" alt="">
+                                    <img class="account-img" src="./public/img/icons8-google-keep.svg" alt="">
                                     <span class="account-text">Google Keep</span>
                                 </a>
                             </li>
                             <li class="account">
                                 <a href="https://accounts.google.com/signin/v2/identifier?service=jamboardcore&passive=1209600&continue=https%3A%2F%2Fjamboard.google.com%2F%3Fusp%3Djam_ald&followup=https%3A%2F%2Fjamboard.google.com%2F%3Fusp%3Djam_ald&flowName=GlifWebSignIn&flowEntry=ServiceLogin" class="account-link">
-                                    <img class="account-img" src="/public/img/jamboard.svg" alt="">
+                                    <img class="account-img" src="./public/img/jamboard.svg" alt="">
                                     <span class="account-text">Jamboard</span>
                                 </a>
                             </li>
                             <li class="account">
                                 <a href="https://earth.google.com/web/@0,0,0a,22251752.77375655d,35y,0h,0t,0r" class="account-link">
-                                    <img class="account-img" src="/public/img/icons8-google-earth.svg" alt="">
+                                    <img class="account-img" src="./public/img/icons8-google-earth.svg" alt="">
                                     <span class="account-text">Планета Земля</span>
                                 </a>
                             </li>
                             <li class="account">
                                 <a href="https://www.google.by/save" class="account-link">
-                                    <img class="account-img" src="/public/img/icons8-google-firebase-console.svg" alt="">
+                                    <img class="account-img" src="./public/img/icons8-google-firebase-console.svg" alt="">
                                     <span class="account-text">Подборки</span>
                                 </a>
                             </li>
                             <li class="account">
                                 <a href="https://artsandculture.google.com/?hl=ru" class="account-link">
-                                    <img class="account-img" src="/public/img/idea.svg" alt="">
+                                    <img class="account-img" src="./public/img/idea.svg" alt="">
                                     <span class="account-text">Google Исскуство и Культура</span>
                                 </a>
                             </li>
@@ -167,14 +167,14 @@
     </header>
     <main class="main">
         <div class="google-image-block">
-            <img class="google-image" src="/public/img/main-image.png" alt="GOOGLE IMAGE">
+            <img class="google-image" src="./public/img/main-image.png" alt="GOOGLE IMAGE">
         </div>
         <div class="search">
             <form action="" class="google-form">
                 <div class="google-form-block">
                     <svg focusable="false" xmlns="http://www.w3.org/2000/svg" class="search-img" fill = "#9AA0A6" width = "20px" height = "20px" viewBox="0 0 24 24"><path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path></svg>
                     <input type="text" class="google-input" autofocus>
-                    <button type="button" class="google-keyboard"><img src="/public/img/keyboard.png" alt=""><div class="keyboard-description">Экранная клавиатура</div></button>
+                    <button type="button" class="google-keyboard"><img src="./public/img/keyboard.png" alt=""><div class="keyboard-description">Экранная клавиатура</div></button>
                     <button type="button" class="google-mic"><svg class="keyboard-img" focusable="false" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m12 15c1.66 0 3-1.31 3-2.97v-7.02c0-1.66-1.34-3.01-3-3.01s-3 1.34-3 3.01v7.02c0 1.66 1.34 2.97 3 2.97z" fill="#4285f4"></path><path d="m11 18.08h2v3.92h-2z" fill="#34a853"></path><path d="m7.05 16.87c-1.27-1.33-2.05-2.83-2.05-4.87h2c0 1.45 0.56 2.42 1.47 3.38v0.32l-1.15 1.18z" fill="#f4b400"></path><path d="m12 16.93a4.97 5.25 0 0 1 -3.54 -1.55l-1.41 1.49c1.26 1.34 3.02 2.13 4.95 2.13 3.87 0 6.99-2.92 6.99-7h-1.99c0 2.92-2.24 4.93-5 4.93z" fill="#ea4335"></path></svg><div class="mic-description">Голосовой поиск</div></button>
                 </div>
                 <div class="google-form-buttons">
